--- a/www.cosmos.studio/projects/crocs-club.html
+++ b/www.cosmos.studio/projects/crocs-club.html
@@ -319,7 +319,7 @@
                   </div>
                   <a
                     typewriter="on"
-                    href="https://www.cosmos.studio/works"
+                    href="https://github.com/CrocAI/CrocAI"
                     class="menu-link w-inline-block"
                     ><div split-type="on">
                       <span class="gridular">G</span>ithu<span class="gridular"
@@ -972,7 +972,7 @@
                 <div>
                   <div class="u--hide_mobile">
                     <a
-                      href="https://chatgpt.com/g/g-6748df83961c819188bf2b98685ce5a9-crocai"
+                      href="https://x.com/Ai_Croc/status/1862915112476287449"
                       class="button cc--small w-inline-block"
                       ><div class="button_flex cc--small">
                         <div class="button-text_wr">
