--- a/www.cosmos.studio/projects/crocs-club.html
+++ b/www.cosmos.studio/projects/crocs-club.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- Last Published: Wed Nov 27 2024 06:09:15 GMT+0000 (Coordinated Universal Time) -->
 <html
-  data-wf-domain="www.cosmos.studio"
+  data-wf-domain="www.crocai.tech"
   data-wf-page="64354a08ff4dd19b76393737"
   data-wf-site="64354a08ff4dd15c2539372b"
   data-wf-collection="64354a08ff4dd1022f393740"
@@ -13,12 +13,12 @@
     <title>CrocAI | A Trader's Bestfriend</title>
     <meta content="CrocAI | A Gamer's Bestfriend" property="og:title" />
     <meta
-      content="https://cdn.prod.website-files.com/64354a08ff4dd191e639373a/66f284a75d1667682e1d417a_Frame%201388%20(1)_11zon.webp"
+      content="https://cdn.discordapp.com/attachments/1083862601412395119/1311885491599314964/66f284a75d1667682e1d417a_Frame_1388_1_11zon-p-800.webp?ex=674c7652&is=674b24d2&hm=baae90d6e7d7c1766544be4ec57fa3d1df655254f2d30397f19cf641b4af5411&"
       property="og:image"
     />
     <meta content="CrocAI | A Gamer's Bestfriend" property="twitter:title" />
     <meta
-      content="https://cdn.prod.website-files.com/64354a08ff4dd191e639373a/66f284a75d1667682e1d417a_Frame%201388%20(1)_11zon.webp"
+      content="https://cdn.discordapp.com/attachments/1083862601412395119/1311885491599314964/66f284a75d1667682e1d417a_Frame_1388_1_11zon-p-800.webp?ex=674c7652&is=674b24d2&hm=baae90d6e7d7c1766544be4ec57fa3d1df655254f2d30397f19cf641b4af5411&"
       property="twitter:image"
     />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
