--- a/www.cosmos.studio/projects/crocs-club.html
+++ b/www.cosmos.studio/projects/crocs-club.html
@@ -13,12 +13,12 @@
     <title>CrocAI | A Trader's Bestfriend</title>
     <meta content="CrocAI | A Gamer's Bestfriend" property="og:title" />
     <meta
-      content="https://cdn.discordapp.com/attachments/1083862601412395119/1311885491599314964/66f284a75d1667682e1d417a_Frame_1388_1_11zon-p-800.webp?ex=674c7652&is=674b24d2&hm=baae90d6e7d7c1766544be4ec57fa3d1df655254f2d30397f19cf641b4af5411&"
+      content="https://cdn.prod.website-files.com/64354a08ff4dd191e639373a/66f284a75d1667682e1d417a_Frame%201388%20(1)_11zon.webp"
       property="og:image"
     />
     <meta content="CrocAI | A Gamer's Bestfriend" property="twitter:title" />
     <meta
-      content="https://cdn.discordapp.com/attachments/1083862601412395119/1311885491599314964/66f284a75d1667682e1d417a_Frame_1388_1_11zon-p-800.webp?ex=674c7652&is=674b24d2&hm=baae90d6e7d7c1766544be4ec57fa3d1df655254f2d30397f19cf641b4af5411&"
+      content="https://cdn.prod.website-files.com/64354a08ff4dd191e639373a/66f284a75d1667682e1d417a_Frame%201388%20(1)_11zon.webp"
       property="twitter:image"
     />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
