--- a/crocs-club.html
+++ b/crocs-club.html
@@ -1082,16 +1082,16 @@
               <div spacer="" class="project-container container">
                 <div class="project_image-grid">
                   <img
-                    src="https://cdn.discordapp.com/attachments/1311892211981615124/1311893942215643186/zxzx.png?ex=674a83f1&is=67493271&hm=519108494152ec1f1ca221fd031657139a8f998b0cf8b38a3c724dee208a244a&"
+                    src="https://cdn.discordapp.com/attachments/1296242440860209196/1312485737106505788/66cbf9ff55eddf9e22670370_3ca6de145578951.62a1ee4841019_1_11zon.webp?ex=674cab18&is=674b5998&hm=1a812bc4e2ae8f23755c371491e75432730ca064ec7ff9b92971e3ae09a80efa&"
                     loading="eager"
                     alt=""
                     sizes="100vw"
                     srcset="
-                    https://cdn.discordapp.com/attachments/1311892211981615124/1311893942215643186/zxzx.png?ex=674a83f1&is=67493271&hm=519108494152ec1f1ca221fd031657139a8f998b0cf8b38a3c724dee208a244a&   500w,
-                    https://cdn.discordapp.com/attachments/1311892211981615124/1311893942215643186/zxzx.png?ex=674a83f1&is=67493271&hm=519108494152ec1f1ca221fd031657139a8f998b0cf8b38a3c724dee208a244a&   800w,
-                    https://cdn.discordapp.com/attachments/1311892211981615124/1311893942215643186/zxzx.png?ex=674a83f1&is=67493271&hm=519108494152ec1f1ca221fd031657139a8f998b0cf8b38a3c724dee208a244a& 1080w,
-                    https://cdn.discordapp.com/attachments/1311892211981615124/1311893942215643186/zxzx.png?ex=674a83f1&is=67493271&hm=519108494152ec1f1ca221fd031657139a8f998b0cf8b38a3c724dee208a244a& 1600w,
-                    https://cdn.discordapp.com/attachments/1311892211981615124/1311893942215643186/zxzx.png?ex=674a83f1&is=67493271&hm=519108494152ec1f1ca221fd031657139a8f998b0cf8b38a3c724dee208a244a&        1920w
+                    https://cdn.discordapp.com/attachments/1296242440860209196/1312485737106505788/66cbf9ff55eddf9e22670370_3ca6de145578951.62a1ee4841019_1_11zon.webp?ex=674cab18&is=674b5998&hm=1a812bc4e2ae8f23755c371491e75432730ca064ec7ff9b92971e3ae09a80efa&   500w,
+                    https://cdn.discordapp.com/attachments/1296242440860209196/1312485737106505788/66cbf9ff55eddf9e22670370_3ca6de145578951.62a1ee4841019_1_11zon.webp?ex=674cab18&is=674b5998&hm=1a812bc4e2ae8f23755c371491e75432730ca064ec7ff9b92971e3ae09a80efa&   800w,
+                    https://cdn.discordapp.com/attachments/1296242440860209196/1312485737106505788/66cbf9ff55eddf9e22670370_3ca6de145578951.62a1ee4841019_1_11zon.webp?ex=674cab18&is=674b5998&hm=1a812bc4e2ae8f23755c371491e75432730ca064ec7ff9b92971e3ae09a80efa& 1080w,
+                    https://cdn.discordapp.com/attachments/1296242440860209196/1312485737106505788/66cbf9ff55eddf9e22670370_3ca6de145578951.62a1ee4841019_1_11zon.webp?ex=674cab18&is=674b5998&hm=1a812bc4e2ae8f23755c371491e75432730ca064ec7ff9b92971e3ae09a80efa& 1600w,
+                    https://cdn.discordapp.com/attachments/1296242440860209196/1312485737106505788/66cbf9ff55eddf9e22670370_3ca6de145578951.62a1ee4841019_1_11zon.webp?ex=674cab18&is=674b5998&hm=1a812bc4e2ae8f23755c371491e75432730ca064ec7ff9b92971e3ae09a80efa&        1920w
                     "
                     class="image full-screen"
                   />
