--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                   </div>
                   <a
                     typewriter="on"
-                    href="https://www.cosmos.studio/"
+                    href="https://www.crocai.tech/"
                     class="menu-link w-inline-block"
                     ><div split-type="on">
                       <span class="gridular">Ho</span>me
